--- a/Micro/HW4/MasonTate_HW4.tex
+++ b/Micro/HW4/MasonTate_HW4.tex
@@ -177,7 +177,7 @@
         If $a<1$, any increase in $a$ makes the risky asset more desirable. Thus $\frac{dx_1}{da}\leq 0$
       \subsubsection*{(e)}
         $\frac{dx_1}{d\pi}<0$ is what is expected. With an increase in $\pi$, the risky asset becomes more attractive when $a>b$.
-      \subsubsection{(f)}
+      \subsubsection*{(f)}
         
 
   \section*{6.C.16}
