--- a/Stat/HW3/MasonTate_HW3.tex
+++ b/Stat/HW3/MasonTate_HW3.tex
@@ -125,6 +125,7 @@
         $\theta n = \sum_{i=1}^n k_i$ \\
         $\boxed{\hat\theta = \frac{1}{n}\sum_{i=1}^n k_i}$
       \end{center}
+      \begin{*align}
 
       The MLE is the sample mean.
     
