--- a/Macro/ps6/MasonTate_PS6.tex
+++ b/Macro/ps6/MasonTate_PS6.tex
@@ -120,6 +120,35 @@ How does growth rate of consumption depend on $\gamma$ and $\sigma$? How do equi
 \subsubsection*{(g)}
 Define a sequential market competitive equilibrium. Find interest rate in this equilibrium. How do equilibrium interest rate depend on $\gamma$ and $\sigma$?
 
+\subsection*{Solutions}
+\subsubsection*{(a)}
+\begin{gather*}
+  {\max\atop{\{c^i_t\}^{\infty}_{t=0}}} \sum\limits_{t=0}^{\infty}\beta^t(\frac{c_t^i^{1-\sigma}-1}{1-\sigma})
+\end{gather*}
+s.t.
+\begin{gather*}
+  \sum\limits^{\infty}_{t=0} \hat{p}_tc_t^i \leq \sum\limits_{t=0}^{\infty}\hat{p}_te_t^i \\
+  \hat{c}_t^i \geq 0 \\
+  0 < \beta < 1\\
+\end{gather*}
+Markets Clear:
+\begin{gather*}
+  \hat{c}_t^1+\hat{c}_t^2 = \hat{e}_t^1+\hat{e}_t^2 \ \forall \ t
+\end{gather*}
+
+\subsubsection*{(b)}
+\begin{gather*}
+  u'(c_t^i) = \frac{p_t}{p_{t+1}}\beta(u'(c_{t+1}))
+\end{gather*}
+
+\subsubsection*{(c)}
+\begin{gather*}
+  {\max\atop{\{c^1_t, c^2_t\}_{t=0}^{\infty}}}\sum\limits_{t=0}^{\infty}\beta^t[\alpha_1\frac{c^1_t^{1-\sigma}-1}{1-\sigma}+\alpha_2\frac{c^2_t^{1-\sigma}}{1-\sigma}-\lambda c^1_t - \lambda c^2_t] \\
+\end{gather*}
+s.t. 
+\begin{gather*}
+  c_t^c_t^2=e_t^1+e_t^2; \lambda
+\end{gather*}
 \section*{Question 2}
 \subsection*{Problem}
 Consider the economy in question 1. Assume $\sigma = 1$ (so log utility) and $\gamma = 1$. Assume the following endowments
