Not sure what changed

--- a/Macro/ps6/MasonTate_PS6.tex
+++ b/Macro/ps6/MasonTate_PS6.tex
@@ -138,16 +138,16 @@ Markets Clear:
 
 \subsubsection*{(b)}
 \begin{gather*}
-  u'(c_t^i) = \frac{p_t}{p_{t+1}}\beta(u'(c_{t+1}))
+  u'(c_t^i) = \frac{p_{t+1}}{p_t}\beta(u'(c_{t+1}))
 \end{gather*}
 
 \subsubsection*{(c)}
 \begin{gather*}
-  {\max\atop{\{c^1_t, c^2_t\}_{t=0}^{\infty}}}\sum\limits_{t=0}^{\infty}\beta^t[\alpha_1\frac{c^1_t^{1-\sigma}-1}{1-\sigma}+\alpha_2\frac{c^2_t^{1-\sigma}}{1-\sigma}-\lambda c^1_t - \lambda c^2_t] \\
+  {\max\atop{\{c^1_t, c^2_t\}_{t=0}^{\infty}}}\sum\limits_{t=0}^{\infty}\beta^t[\alpha_1\frac{c^1_t^{1-\sigma}-1}{1-\sigma}+\alpha_2\frac{c^2_t^{1-\sigma}}{1-\sigma}] \\
 \end{gather*}
 s.t. 
 \begin{gather*}
-  c_t^c_t^2=e_t^1+e_t^2; \lambda
+  c_t^1+c_t^2=e_t^1+e_t^2 = 2\gamma^t; \lambda
 \end{gather*}
 \section*{Question 2}
 \subsection*{Problem}
